--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "build": "tsup index.ts --format cjs,esm --dts",
     "lint": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "Inzamam Malik (malikasinger)",
   "license": "ISC",
@@ -17,8 +17,11 @@
     "bcrypt": "^5.1.0"
   },
   "devDependencies": {
-    "tsup": "^7.2.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/jest": "^29.5.3",
+    "jest": "^29.6.2",
+    "ts-node": "^10.9.1",
+    "tsup": "^7.2.0",
     "typescript": "^5.1.6"
   },
   "contributors": [
